--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@headlessui/tailwindcss": "^0.1.2",
         "@heroicons/react": "^2.0.15",
         "@uiw/react-md-editor": "^3.20.2",
+        "@vitejs/plugin-basic-ssl": "^1.0.1",
         "flowbite": "^1.6.3",
         "flowbite-react": "^0.3.8",
         "moment-timezone": "^0.5.40",
